--- a/css/main.css
+++ b/css/main.css
@@ -143,9 +143,14 @@ h3 {
   margin-right: auto;
 }
 
+.logo-mail {
+  display: inline-flex;
+  align-items: center;
+}
+
 .logo-mail::before {
   content: "";
-  display: inline-block;
+  display: block;
   width: 16px;
   height: 12px;
   margin-right: 10px;
@@ -153,12 +158,14 @@ h3 {
   background-repeat: no-repeat;
 }
 
+.logo-phone {
+  display: inline-flex;
+  align-items: center;
+}
+
 .logo-phone::before {
   content: "";
-  /*display: inline-flex;*/
-  display: inline-block;
-  /*justify-content: center;
-  align-items: center;*/
+  display: block;
   width: 10px;
   height: 16px;
   margin-right: 10px;
