--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -102,3 +102,10 @@
 .project-description {
   padding: 20px 24px;
 }
+
+.project-item-kind:hover,
+.project-item-kind:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+}
