--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,12 @@ main {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--footer-background);
-  background-image: url(../images/heroes.svg);
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url(../images/heroes.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -114,8 +119,24 @@ main {
   margin-bottom: 30px;
   border-radius: 4px;
   background-color: var(--feautures-logo);
-  /*background-image: url(../images/logo/mail.svg);*/
   background-repeat: no-repeat;
+  background-position: center;
+}
+
+.features-list:nth-child(1)::before {
+  background-image: url(../images/features/antenna.svg);
+}
+
+.features-list:nth-child(2)::before {
+  background-image: url(../images/features/clock.svg);
+}
+
+.features-list:nth-child(3)::before {
+  background-image: url(../images/features/diagram.svg);
+}
+
+.features-list:nth-child(4)::before {
+  background-image: url(../images/features/astronaut.svg);
 }
 
 .features-scroll {
@@ -141,11 +162,9 @@ main {
   display: flex;
   flex-wrap: wrap;
   padding-top: 50px;
-  /*margin-right: -30px;*/
 }
 
 .occupation-item-list {
-  /*flex-basis: calc(100% / 3 - 30px);*/
   width: calc((100% - 60px) / 3);
   margin-left: 0px;
 }
@@ -175,7 +194,6 @@ main {
   display: block;
   border: 1px;
   border-radius: 0px 0px 4px 4px;
-  /*flex-basis: calc(100% / 4 - 30px);*/
   width: calc((100% - 60px) / 4);
   background-color: var(--white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -209,9 +227,49 @@ main {
   letter-spacing: 0.03em;
   color: var(--title-color);
   padding-top: 10px;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  padding-top: 16px;
+  padding-bottom: 30px;
+  padding-right: 32px;
+  padding-left: 32px;
+}
+
+.social-icons-items:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-icons-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: var(--white);
+  /*background-color: #2f303a;*/
+  border-radius: 50%;
+}
+
+.social-icons-link:hover,
+.social-icons-link:focus {
+  background-color: var(--accent-color);
+}
+
+.social-icons-link:hover .social-icons-svg,
+.social-icons-link:focus .social-icons-svg {
+  fill: var(--white);
+}
+
+.social-icons-svg {
+  width: 20px;
+  height: 20px;
+  fill: var(--clients);
 }
 
 .clients {
@@ -224,7 +282,9 @@ main {
 }
 
 .clients-companies {
-  /*display: flex;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 170px;
   height: 90px;
   border: 1px solid var(--clients);
@@ -234,4 +294,18 @@ main {
 
 .clients-companies:not(:last-child) {
   margin-right: 30px;
+}
+
+.clients-companies-logo {
+  fill: var(--clients);
+}
+
+.clients-companies:hover,
+.clients-companies:focus {
+  border: 1px solid var(--accent-color);
+}
+
+.clients-companies:hover .clients-companies-logo,
+.clients-companies:focus .clients-companies-logo {
+  fill: var(--accent-color);
 }
