--- a/css/main.css
+++ b/css/main.css
@@ -111,11 +111,17 @@ html {
 }
 
 .header-container {
+  width: 1200px;
   padding-top: 24px;
   padding-bottom: 25px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
+}
+
+.header {
+  background-color: var(--white);
+  border-bottom: 1px solid #ececec;
 }
 
 h1,
@@ -233,10 +239,6 @@ h3 {
   list-style: none;
   margin: 0px;
   padding: 0px;
-}
-
-header {
-  background-color: #ececec;
 }
 
 .contact-link {
